<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        style="@style/ImageStyle"
        android:src="@drawable/badminton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center">

        <TextView
            style="@style/TextViewStyle1"
            android:id="@+id/text_1"
            android:text="@string/set"/>

        <TextView
            android:id="@+id/text_2"
            android:text="@string/one"
            android:layout_toRightOf="@id/text_1"
            style="@style/TextViewStyle1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewStyle2"
                        android:text="@string/set1"/>

                    <TextView
                        android:id="@+id/playerA_set1"
                        android:text="@string/zero"
                        style="@style/TextViewStyle3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/set2"
                        style="@style/TextViewStyle2" />

                    <TextView
                        android:id="@+id/playerA_set2"
                        android:text="@string/zero"
                        style="@style/TextViewStyle3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/set3"
                        style="@style/TextViewStyle2" />

                    <TextView
                        android:id="@+id/playerA_set3"
                        android:text="0"
                        style="@style/TextViewStyle3"/>
                </LinearLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white" />

            <TextView
                android:text="@string/playerA"
                style="@style/TextViewStyle4"
                android:padding="16dp"
                android:layout_marginTop="40dp" />

            <TextView
                android:id="@+id/player_a_score"
                android:text="@string/zero"
                style="@style/TextViewStyle5" />

            <Button
                android:id="@+id/button_score_a"
                style="@style/ButtonStyle1"
                android:onClick="addOnePointA" />

        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="30dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/set1"
                        style="@style/TextViewStyle2"/>

                    <TextView
                        android:text="@string/zero"
                        android:id="@+id/playerB_set1"
                        style="@style/TextViewStyle3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/set2"
                        style="@style/TextViewStyle2"/>

                    <TextView
                        android:text="@string/zero"
                        style="@style/TextViewStyle3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/set3"
                        style="@style/TextViewStyle2" />

                    <TextView
                        android:text="@string/zero"
                        android:id="@+id/playerB_set3"
                        style="@style/TextViewStyle3" />
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/white" />
            <TextView
                android:text="@string/playerB"
                android:layout_marginTop="40dp"
                android:padding="16dp"
                style="@style/TextViewStyle4"/>

            <TextView
                android:id="@+id/player_b_score"
                android:text="@string/zero"
                style="@style/TextViewStyle5" />

            <Button android:id="@+id/button_score_b"
                style="@style/ButtonStyle1"
                android:onClick="addOnePointB"
                 />

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/game_winner"
        android:text="@string/gameWinnerMessage"
        android:layout_above="@id/set_button"
        android:layout_marginBottom="8dp"
        style="@style/TextViewStyle6" />
    <Button
        android:id="@+id/set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_winner"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="24dp"
        android:onClick="newSet"
        android:text="@string/nextSet" />

    <TextView
        android:id="@+id/text_winner"
        android:text="@string/setWinnerMessage"
        android:layout_above="@id/reset_button"
        style="@style/TextViewStyle6" />

    <Button
        android:id="@+id/reset_button"
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:onClick="resetScore" />
</RelativeLayout>
</ScrollView>